Daniel fixes spacing and alignment in costs description in jewelry workshop

--- a/frontend/css/jewelry-workshop-devices.css
+++ b/frontend/css/jewelry-workshop-devices.css
@@ -336,7 +336,7 @@ h1 {
 }
 
 .workshop-costs {
-  width: 65vw;
+  width: 85vw;
   height: 100%;
   font-size: 1.2rem;
   padding: 1rem;
